--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
+*{
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  padding: 60px;
+  background-color: rgb(25, 25, 37);
+  color: #ffff;
+}
+
+input{
+  width: 100%;
+  font-size: 1.2rem;
+  color: grey;
+  margin: 20px 0;
+  outline: none;
+  border-radius: 30px;
+  padding: 10px;
+  border: none;
+}
+
+.card-grid{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card{
+  border: 1px solid grey;
+  margin: 30px 20px;
+  color: #ffff;
+}
+
+.card p{
+  padding: 10px;
+}
+
+.card img{
+  max-height: 300px;
+  width: 100%;
 }
